resolucion issue #4. Anadir HEADER

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <title>APP Diego</title>
   </head>
   <body>
-    
+    <include src="./views/header.html"></include>
     <include src="./views/footer.html"></include>
     <script type="module" src="./assets/scripts/main.js"></script><!-- do not remove this line! -->
   </body>
