adicion de header

--- a/src/sobre_mi.html
+++ b/src/sobre_mi.html
@@ -11,7 +11,7 @@
     
     <include src="./views/header.html"></include>
     <include src="./views/fondo.html"></include>
-    <H1>INDEX</H1>
+    <H1>SOBRE MI</H1>
     <include src="./views/footer.html"></include>
     <script type="module" src="./assets/scripts/main.js"></script><!-- do not remove this line! -->
   </body>
