adicion de codigo de pagina

--- a/src/login.html
+++ b/src/login.html
@@ -8,10 +8,9 @@
     <title>APP Diego</title>
   </head>
   <body>
-    
     <include src="./views/header.html"></include>
     <include src="./views/fondo.html"></include>
-    <include src="./views/index_main.html"></include>
+    <include src="./views/login_main.html"></include>
     <include src="./views/footer.html"></include>
     <script type="module" src="./assets/scripts/main.js"></script><!-- do not remove this line! -->
   </body>
