--- a/src/programacion.html
+++ b/src/programacion.html
@@ -11,7 +11,7 @@
     
     <include src="./views/header.html"></include>
     <include src="./views/fondo.html"></include>
-    <H1>PROGRAMACION</H1>
+    <include src="./views/programacion_main.html"></include>
     <include src="./views/footer.html"></include>
     <script type="module" src="./assets/scripts/main.js"></script><!-- do not remove this line! -->
   </body>
